# mkdocs-wiki-test

./: 404.html  404.php  README.md  index.html  index.md.bak  index.php  login.php  main.html.test  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-live.yml  deploy-test.yml  mkdocs-test.yml
admin/: index.php
bedienung/how-to/: index.html
bedienung/setup/: index.html
docs/: .pages  .pages.live  .pages.test  getting-started.md  how-to.md  index.md  index.test.md  specimen.md
docs/admin/: config.yml  index.html
docs/bedienung/: .pages  how-to.md  setup.md
docs/examples/: index.md
docs/extensions/: .pages  admonition.md
docs/images/: 657334749-poster-image[1]
docs/introduction/: index.md
docs/stylesheets/: extra.css
examples/: index.html  index.php
extensions/admonition/: index.html  index.php
extensions/codehilite/: index.html  index.php
extensions/footnotes/: index.html  index.php
extensions/metadata/: index.html  index.php
extensions/permalinks/: index.html  index.php
extensions/pymdown/: index.html  index.php
how-to/: index.html  index.php
index.live/: index.html  index.php
index.test/: index.html
introduction/: index.html  index.php
kontakt/: index.html  index.php
license/: index.html  index.php
material/overrides/: home.html  main.html.test
material/overrides/partials/: comments.html
search/: search_index.json
stylesheets/: extra.css
