[tool.poetry]
name = "mkdocs-cms"
version = "0.1.0"
description = "Demo Site for MkDocs on Netlify"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mkdocs_cms"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.13"
pymdown-extensions = "^10.0.1"
fontawesome-markdown = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
